--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      background: url('fondo.jpg') no-repeat center center / cover;
+      background: url('img/fondo.jpg') no-repeat center center / cover;
       font-family: 'Inter', sans-serif;
       color: white;
       display: flex;
@@ -30,49 +30,86 @@
       top: 0; left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(0, 0, 0, 0.3); /* más claro */
       z-index: 0;
     }
 
-    h1, .subtitle, .buttons, .footer {
     h1, .subtitle, .buttons, .note {
       z-index: 1;
+      position: relative;
     }
 
-@@ -75,16 +75,16 @@
-      background: rgba(255, 255, 255, 0.1);
+    h1 {
+      font-size: 3.5rem;
+      margin-bottom: 1rem;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
     }
 
-    .footer {
-      position: absolute;
-      bottom: 1rem;
-      font-size: 0.9rem;
-      color: #999;
+    .subtitle {
+      font-size: 1.4rem;
+      margin-bottom: 2rem;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+    }
+
+    .buttons {
+      display: flex;
+      gap: 1.5rem;
+      margin-bottom: 2rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .buttons a {
+      padding: 1rem 2rem;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1rem;
+      transition: background 0.3s, transform 0.2s;
+      color: white;
+      background: #e91e63; /* rosa fuerte */
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    }
+
+    .buttons a:hover {
+      background: #c2185b;
+      transform: scale(1.05);
+    }
+
     .note {
       margin-top: 1.5rem;
-      font-size: 0.95rem;
-      color: #ccc;
+      font-size: 1rem;
+      color: #eee;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
     }
 
-    .footer a {
     .note a {
-      color: white;
+      color: #ff80ab;
       text-decoration: none;
       font-weight: bold;
     }
+
+    .note a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
-@@ -102,9 +102,10 @@
-    </a>
+<body>
+  <h1>Sweet Bunny Pole</h1>
+  <p class="subtitle">Pole Dance • Exotic Flow • Fitness</p>
+
+  <div class="buttons">
+    <a href="https://www.instagram.com/polemt15/" target="_blank">Instagram</a>
+    <a href="mailto:piar@dianarider.com">Contact</a>
+    <a href="https://t.me/TU_USUARIO_TELEGRAM" target="_blank">Telegram</a>
+    <a href="https://onlyfans.com/TU_USUARIO" target="_blank">OnlyFans</a>
   </div>
 
-  <div class="footer">
-    Cooperation <a href="mailto:piar@dianarider.com">piar@dianarider.com</a>
-  </div>
   <p class="note">
     📩 For collaborations or inquiries, message me on 
     <a href="https://www.instagram.com/polemt15/" target="_blank">Instagram</a>.
   </p>
-
 </body>
 </html>
+
+
