--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
     <p class="subtitle">Exotic Flow • Pole Dance • Fitness</p>
 
     <div class="buttons">
-      <a href="https://onlyfans.com/TU_USUARIO" target="_blank">🔥 OnlyFans</a>
-      <a href="https://www.instagram.com/polemt15/" target="_blank">📸 Instagram</a>
-      <a href="https://t.me/TU_USUARIO" target="_blank">💬 Telegram</a>
+      <a href="https://t.me/+34ArLJGl4WViNTRh" target="_blank">🔥 OnlyFans</a>
+      <a href="https://www.instagram.com/sweet_bunnypole/?hl=es"_blank">📸 Instagram</a>
+      <a href="https://onlyfans.com/sweetbunnypole">💬 Telegram</a>
     </div>
   </div>
 </body>
 </html>
+
 
 
 
